Prepare Web/Media for Markdowning

--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>{{FirefoxSidebar}}{{draft}}</p>
 
-<p class="summary">This article provides information about the changes in Firefox 93 that will affect developers. Firefox 93 was released on October 5, 2021</a>.</p>
+<p class="summary">This article provides information about the changes in Firefox 93 that will affect developers. Firefox 93 was released on October 5, 2021.</p>
 
 <h2 id="Changes_for_web_developers">Changes for web developers</h2>
 
@@ -38,7 +38,7 @@ tags:
 
 <ul>
   <li>The SHA-256 algorithm is now supported for <a href="/en-US/docs/Web/HTTP/Authentication">HTTP Authentication</a> using digests. This allows much more secure authentication than previously available using the MD5 algorithm ({{bug(1682995)}}).</li>
-  <li>The default HTTP {{HTTPHeader("ACCEPT")}} header for <em>images</em> changed to: <code>image/avif,image/webp,*/*</code> (following addition of support for the <a href="/en-US/docs/Web/Media/Formats/Image_types#avif">AVIF</a> image format). ({{bug(1682995)}}).</li>
+  <li>The default HTTP {{HTTPHeader("ACCEPT")}} header for <em>images</em> changed to: <code>image/avif,image/webp,*/*</code> (following addition of support for the <a href="/en-US/docs/Web/Media/Formats/Image_types#AVIF_image">AVIF</a> image format). ({{bug(1682995)}}).</li>
 </ul>
 
 <h3 id="APIs">APIs</h3>
@@ -83,7 +83,7 @@ tags:
 <h2 id="Other">Other</h2>
 
 <ul>
-  <li>Support for <a href="/en-US/docs/Web/Media/Formats/Image_types#avif">AVIF</a> images is now enabled by default ({{bug(1682995)}}).
+  <li>Support for <a href="/en-US/docs/Web/Media/Formats/Image_types#AVIF_image">AVIF</a> images is now enabled by default ({{bug(1682995)}}).
     This format has excellent compression and no patent restrictions (it was developed by the <a href="http://aomedia.org/">Alliance for Open Media</a>).
     Firefox can display still images, with colorspace support for both full and limited range colors, and image transforms for mirroring and rotation.
     The preference <a href="/en-US/docs/Mozilla/Firefox/Experimental_features#avif_compliance_strictness">image.avif.compliance_strictness</a> can be used to adjust the compliance strictness with the specification. Animated images are not supported.</li>
