--- a/files/en-us/web/media/formats/index.html
+++ b/files/en-us/web/media/formats/index.html
@@ -48,7 +48,7 @@ tags:
 </dl>
 
 
-<h2 class="Documentation" id="Guides">Guides</h2>
+<h2 id="Guides">Guides</h2>
 
 <h3 id="Concepts">Concepts</h3>
 
