--- a/files/en-us/web/media/formats/video_codecs/index.html
+++ b/files/en-us/web/media/formats/video_codecs/index.html
@@ -24,6 +24,8 @@ tags:
 ---
 <div>{{QuickLinksWithSubpages("/en-US/docs/Web/Media")}}</div>
 
+<p>This guide introduces the video codecs you're most likely to encounter or consider using on the web, summaries of their capabilities and any compatibility and utility concerns, and advice to help you choose the right codec for your project's video.</p>
+
 <p>Due to the sheer size of uncompressed video data, it's necessary to compress it significantly in order to store it, let alone transmit it over a network. Imagine the amount of data needed to store uncompressed video:</p>
 
 <ul>
@@ -36,8 +38,6 @@ tags:
 <p>Not only is the required storage space enormous, but the network bandwidth needed to transmit an uncompressed video like that would be enormous, at 249 MB/sec—not including audio and overhead. This is where video codecs come in. Just as audio codecs do for the sound data, video codecs compress the video data and encode it into a format that can later be decoded and played back or edited.</p>
 
 <p>Most video codecs are <strong>lossy</strong>, in that the decoded video does not precisely match the source. Some details may be lost; the amount of loss depends on the codec and how it's configured, but as a general rule, the more compression you achieve, the more loss of detail and fidelity will occur. Some lossless codecs do exist, but they are typically used for archival and storage for local playback rather than for use on a network.</p>
-
-<p><span class="seoSummary">This guide introduces the video codecs you're most likely to encounter or consider using on the web, summaries of their capabilities and any compatibility and utility concerns, and advice to help you choose the right codec for your project's video.</span></p>
 
 <h2 id="Common_codecs">Common codecs</h2>
 
@@ -83,7 +83,7 @@ tags:
    <td><a href="/en-US/docs/Web/Media/Formats/Containers#mpegmpeg-2">MPEG</a>, <a href="/en-US/docs/Web/Media/Formats/Containers#quicktime">QuickTime</a></td>
   </tr>
   <tr>
-   <th scope="row"><a href="#mpeg-2_part_2_video">MPEG-2</a></th> 
+   <th scope="row"><a href="#mpeg-2_part_2_video">MPEG-2</a></th>
    <td>MPEG-2 Part 2 Visual</td>
    <td><a href="/en-US/docs/Web/Media/Formats/Containers#mp4">MP4</a>, <a href="/en-US/docs/Web/Media/Formats/Containers#mpegmpeg-2">MPEG</a>, <a href="/en-US/docs/Web/Media/Formats/Containers#quicktime">QuickTime</a></td>
   </tr>
@@ -348,7 +348,10 @@ tags:
  <tbody>
   <tr>
    <th scope="row">Supported bit rates</th>
-   <td>Varies depending on the video's level; theoretical maximum reaches 800 Mbps at level 6.3<sup><a href="#av1-foot-2">[2]</a></sup></td>
+   <td>
+     <p>Varies depending on the video's level; theoretical maximum reaches 800 Mbps at level 6.3</p>
+     <p>See the AV1 specification's <a href="https://aomediacodec.github.io/av1-spec/#levels">tables of levels</a>, which describe the maximum resolutions and rates at each level.</p>
+   </td>
   </tr>
   <tr>
    <th scope="row">Supported frame rates</th>
@@ -430,7 +433,7 @@ tags:
   </tr>
   <tr>
    <th scope="row">Container support</th>
-   <td>ISOBMFF<sup><a href="#av1-foot-1">[1]</a></sup>, MPEG-TS, <a href="/en-US/docs/Web/Media/Formats/Containers#mp4">MP4</a>, <a href="/en-US/docs/Web/Media/Formats/Containers#webm">WebM</a></td>
+   <td><a href="https://en.wikipedia.org/wiki/ISO/IEC_base_media_file_format">ISOBMFF</a>, MPEG-TS, <a href="/en-US/docs/Web/Media/Formats/Containers#mp4">MP4</a>, <a href="/en-US/docs/Web/Media/Formats/Containers#webm">WebM</a></td>
   </tr>
   <tr>
    <th scope="row">{{Glossary("RTP")}} / <a href="/en-US/docs/Web/API/WebRTC_API">WebRTC</a> compatible</th>
@@ -451,11 +454,6 @@ tags:
  </tbody>
 </table>
 
-<p><a id="av1-foot-1">[1]</a> {{interwiki("wikipedia", "ISO Base Media File Format")}}</p>
-
-<p><a name="av1-foot-2">[2]</a> See the AV1 specification's <a href="https://aomediacodec.github.io/av1-spec/#levels">tables of levels</a>, which describe the maximum resolutions and rates at each level.</p>
-
-<a name="AVC"></a>
 <h3 id="avc_h.264">AVC (H.264)</h3>
 
 <p>The MPEG-4 specification suite's <strong>Advanced Video Coding</strong> (<strong>AVC</strong>) standard is specified by the identical ITU H.264 specification and the MPEG-4 Part 10 specification. It's a motion compensation based codec that is widely used today for all sorts of media, including broadcast television, {{Glossary("RTP")}} videoconferencing, and as the video codec for Blu-Ray discs.</p>
@@ -575,13 +573,14 @@ tags:
        <th scope="row">AVC/H.264 support</th>
        <td>4</td>
        <td>12</td>
-       <td>35<sup><a href="#avc-foot-1">[1]</a></sup></td>
+       <td>35</td>
        <td>9</td>
        <td>25</td>
        <td>3.2</td>
       </tr>
      </tbody>
     </table>
+    <p>Firefox support for AVC is dependent upon the operating system's built-in or preinstalled codecs for AVC and its container in order to avoid patent concerns.</p>
    </td>
   </tr>
   <tr>
@@ -607,8 +606,6 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<p><a id="avc-foot-1">[1]</a> Firefox support for AVC is dependent upon the operating system's built-in or preinstalled codecs for AVC and its container in order to avoid patent concerns.</p>
 
 <h3 id="H.263">H.263</h3>
 
@@ -638,7 +635,9 @@ tags:
   </tr>
   <tr>
    <th scope="row">Supported frame sizes</th>
-   <td>Up to 1408 x 1152 pixels<sup><a href="#h263-foot-2">[2]</a></sup></td>
+   <td>
+     <p>Up to 1408 x 1152 pixels.</p>
+     <p>Version 1 of H.263 specifies a set of picture sizes which are supported. Later versions may support additional resolutions.</p></td>
   </tr>
   <tr>
    <th scope="row">Supported color modes</th>
@@ -670,7 +669,7 @@ tags:
        <th scope="row">H.263 support</th>
        <td>No</td>
        <td>No</td>
-       <td>No<sup><a href="#h263-foot-1">[1]</a></sup></td>
+       <td>No</td>
        <td>No</td>
        <td>No</td>
        <td>No</td>
@@ -702,11 +701,6 @@ tags:
  </tbody>
 </table>
 
-<p><a id="h263-foot-1">[1]</a> While Firefox does not generally support H.263, the OpenMax platform implementation (used for the Boot to Gecko project upon which Firefox OS was based) did support H.263 in 3GP files.</p>
-
-<p><a id="h263-foot-2">[2]</a> Version 1 of H.263 specifies a set of picture sizes which are supported. Later versions may support additional resolutions.</p>
-
-<a id="hevc"></a>
 <h3 id="hevc_h.265">HEVC (H.265)</h3>
 
 <p>The <strong><a href="http://hevc.info/">High Efficiency Video Coding</a></strong> (<strong>HVEC</strong>) codec is defined by ITU's <strong>H.265</strong> as well as by MPEG-H Part 2 (the still in-development follow-up to MPEG-4). HEVC was designed to support efficient encoding and decoding of video in sizes including very high resolutions (including 8K video), with a structure specifically designed to let software take advantage of modern processors. Theoretically, HEVC can achieve compressed file sizes half that of <a href="#avc_h.264">AVC</a> but with comparable image quality.</p>
@@ -823,14 +817,17 @@ tags:
       <tr>
        <th scope="row">HEVC / H.265 support</th>
        <td>No</td>
-       <td>18<sup><a href="#hevc-foot--1">[1]</a></sup></td>
-       <td>No<sup><a href="#hevc-foot-2">[2]</a></sup></td>
-       <td>11<sup><a href="#hevc-foot--1">[1]</a></sup></td>
+       <td>18</td>
+       <td>No</td>
+       <td>11</td>
        <td>No</td>
        <td>11</td>
       </tr>
      </tbody>
     </table>
+    <p>Internet Explorer and Edge only supports HEVC on devices with a hardware codec.</p>
+
+    <p>Mozilla will not support HEVC while it is encumbered by patents.</p>
    </td>
   </tr>
   <tr>
@@ -856,10 +853,6 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<p><a id="hevc-foot--1">[1]</a> Internet Explorer and Edge only supports HEVC on devices with a hardware codec.</p>
-
-<p><a id="hevc-foot-2">[2]</a> Mozilla will not support HEVC while it is encumbered by patents.</p>
 
 <h3 id="MP4V-ES">MP4V-ES</h3>
 
@@ -915,15 +908,18 @@ tags:
       </tr>
       <tr>
        <th scope="row">MP4V-ES support</th>
-       <td>No<sup><a href="#mp4ves-foot-2">[2]</a></sup></td>
        <td>No</td>
-       <td>Yes<sup><a href="#mp4ves-foot-1">[1]</a></sup></td>
+       <td>No</td>
+       <td>Yes</td>
        <td>No</td>
        <td>No</td>
        <td>No</td>
       </tr>
      </tbody>
     </table>
+    <p>Firefox supports MP4V-ES in <a href="/en-US/docs/Web/Media/Formats/Containers#3gp">3GP</a> containers only.</p>
+
+    <p>Chrome does not support MP4V-ES; however, Chrome OS does.</p>
    </td>
   </tr>
   <tr>
@@ -949,11 +945,6 @@ tags:
  </tbody>
 </table>
 
-<p><a id="mp4ves-foot-1">[1]</a> Firefox supports MP4V-ES in <a href="/en-US/docs/Web/Media/Formats/Containers#3gp">3GP</a> containers only.</p>
-
-<p><a name="mp4ves-foot-2">[2]</a> Chrome does not support MP4V-ES; however, Chrome OS does.</p>
-
-<a id="MPEG-1"></a>
 <h3 id="mpeg-1_part_2_video">MPEG-1 Part 2 Video</h3>
 
 <p><strong>MPEG-1 Part 2 Video</strong> was unveiled at the beginning of the 1990s. Unlike the later MPEG video standards, MPEG-1 was created solely by MPEG, without the {{Glossary("ITU", "ITU's")}} involvement.</p>
@@ -1040,10 +1031,9 @@ tags:
  </tbody>
 </table>
 
-<a id="MPEG-2"></a>
 <h3 id="mpeg-2_part_2_video">MPEG-2 Part 2 Video</h3>
 
-<p><span class="seoSummary"><strong><a href="https://en.wikipedia.org/wiki/H.262/MPEG-2_Part_2">MPEG-2 Part 2</a></strong> is the video format defined by the MPEG-2 specification, and is also occasionally referred to by its {{Glossary("ITU")}} designation, H.262.</span> It is very similar to MPEG-1 video—in fact, any MPEG-2 player can automatically handle MPEG-1 without any special work—except it has been expanded to support higher bit rates and enhanced encoding techniques.</p>
+<p><strong><a href="https://en.wikipedia.org/wiki/H.262/MPEG-2_Part_2">MPEG-2 Part 2</a></strong> is the video format defined by the MPEG-2 specification, and is also occasionally referred to by its {{Glossary("ITU")}} designation, H.262. It is very similar to MPEG-1 video—in fact, any MPEG-2 player can automatically handle MPEG-1 without any special work—except it has been expanded to support higher bit rates and enhanced encoding techniques.</p>
 
 <p>The goal was to allow MPEG-2 to compress standard definition television, so interlaced video is also supported. The standard definition compression rate and the quality of the resulting video met needs well enough that MPEG-2 is the primary video codec used for DVD video media.</p>
 
@@ -1232,7 +1222,9 @@ tags:
   </tr>
   <tr>
    <th scope="row">Variable Frame Rate (VFR) support</th>
-   <td>Yes<sup><a href="#theora-foot-1">[1]</a></sup></td>
+   <td>
+     <p>Yes</p>
+     <p>While Theora doesn't support Variable Frame Rate (VFR) within a single stream, multiple streams can be chained together within a single file, and each of those can have its own frame rate, thus allowing what is essentially VFR. However, this is impractical if the frame rate needs to change frequently.</p></td>
   </tr>
   <tr>
    <th scope="row">Browser compatibility</th>
@@ -1251,7 +1243,7 @@ tags:
       <tr>
        <th scope="row">Theora support</th>
        <td>3</td>
-       <td>Yes<sup><a href="#theora-foot-2">[2]</a></sup></td>
+       <td>Yes</td>
        <td>3.5</td>
        <td>No</td>
        <td>10.5</td>
@@ -1259,6 +1251,7 @@ tags:
       </tr>
      </tbody>
     </table>
+    <p>Edge supports Theora with the optional <a href="https://www.microsoft.com/en-us/p/web-media-extensions/9n5tdp8vcmhs?activetab=pivot:overviewtab">Web Media Extensions</a> add-on.</p>
    </td>
   </tr>
   <tr>
@@ -1283,10 +1276,6 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<p><a id="theora-foot-1">[1]</a> While Theora doesn't support Variable Frame Rate (VFR) within a single stream, multiple streams can be chained together within a single file, and each of those can have its own frame rate, thus allowing what is essentially VFR. However, this is impractical if the frame rate needs to change frequently.</p>
-
-<p><a name="theora-foot-2">[2]</a> Edge supports Theora with the optional <a href="https://www.microsoft.com/en-us/p/web-media-extensions/9n5tdp8vcmhs?activetab=pivot:overviewtab">Web Media Extensions</a> add-on.</p>
 
 <h3 id="VP8">VP8</h3>
 
@@ -1343,23 +1332,30 @@ tags:
       <tr>
        <th scope="row">VP8 support</th>
        <td>25</td>
-       <td>14<sup><a href="#vp8-foot-1">[1]</a></sup></td>
+       <td>14</td>
        <td>4</td>
        <td>9</td>
        <td>16</td>
-       <td>12.1<sup><a href="#vp8-foot-2">[2]</a></sup></td>
+       <td>12.1</td>
       </tr>
       <tr>
        <th scope="row">MSE compatibility</th>
        <td></td>
        <td></td>
-       <td>Yes<sup><a href="#vp8-foot-3">3</a></sup></td>
+       <td>Yes</td>
        <td></td>
        <td></td>
        <td></td>
       </tr>
      </tbody>
     </table>
+
+    <p>Edge support for VP8 requires the use of <a href="/en-US/docs/Web/API/Media_Source_Extensions_API">Media Source Extensions</a>.</p>
+
+    <p>Safari only supports VP8 in WebRTC connections.</p>
+
+    <p>Firefox only supports VP8 in MSE when no H.264 hardware decoder is available. Use {{domxref("MediaSource.isTypeSupported()")}} to check for availability.</p>
+
    </td>
   </tr>
   <tr>
@@ -1384,12 +1380,6 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<p><a name="vp8-foot-1">[1]</a> Edge support for VP8 requires the use of <a href="/en-US/docs/Web/API/Media_Source_Extensions_API">Media Source Extensions</a>.</p>
-
-<p><a id="vp8-foot-2">[2]</a> Safari only supports VP8 in WebRTC connections.</p>
-
-<p><a id="vp8-foot-3">[3]</a> Firefox only supports VP8 in MSE when no H.264 hardware decoder is available. Use {{domxref("MediaSource.isTypeSupported()")}} to check for availability.</p>
 
 <h3 id="VP9">VP9</h3>
 
@@ -1492,13 +1482,14 @@ tags:
        <th scope="row">MSE compatibility</th>
        <td></td>
        <td></td>
-       <td>Yes<sup><a href="#vp9-foot-1">1</a></sup></td>
+       <td>Yes</td>
        <td></td>
        <td></td>
        <td></td>
       </tr>
      </tbody>
     </table>
+    <p>Firefox only supports VP8 in MSE when no H.264 hardware decoder is available. Use {{domxref("MediaSource.isTypeSupported()")}} to check for availability.</p>
    </td>
   </tr>
   <tr>
@@ -1523,8 +1514,6 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<p><a id="vp9-foot-1">[1]</a> Firefox only supports VP8 in MSE when no H.264 hardware decoder is available. Use {{domxref("MediaSource.isTypeSupported()")}} to check for availability.</p>
 
 <h2 id="Choosing_a_video_codec">Choosing a video codec</h2>
 
@@ -1566,7 +1555,7 @@ tags:
 </ol>
 
 <div class="notecard note">
-<p>Keep in mind that the {{HTMLElement("video")}} element requires a closing <code>&lt;/video&gt;</code> tag, whether or not you have any {{HTMLElement("source")}} elements inside it.</p>
+<p><strong>Note:</strong> The {{HTMLElement("video")}} element requires a closing <code>&lt;/video&gt;</code> tag, whether or not you have any {{HTMLElement("source")}} elements inside it.</p>
 </div>
 
 <h3 id="Recommendations_for_high-quality_video_presentation">Recommendations for high-quality video presentation</h3>
