--- a/files/en-us/web/media/images/index.html
+++ b/files/en-us/web/media/images/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>The {{Glossary("HTML")}} {{HTMLElement("img")}} element lets you embed images into an HTML document, while the {{HTMLElement("picture")}} element enables <a href="/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images">responsive images</a>. In this guide you'll find links to resources that deal with adding images to websites.</p>
 
-<h2 class="Documentation" id="References">References</h2>
+<h2 id="References">References</h2>
 
 <p>These articles cover some of the HTML elements and CSS properties that are used to control how images are displayed on the web.</p>
 
@@ -33,7 +33,7 @@ tags:
  <dd>The <strong><code>background-image</code></strong> <a href="/en-US/docs/Web/CSS">CSS</a> property sets one or more background images for an element.</dd>
 </dl>
 
-<h2 class="Documentation" id="Guides">Guides</h2>
+<h2 id="Guides">Guides</h2>
 
 <p>These articles provide guidance on selecting and configuring image types.</p>
 
