--- a/files/en-us/web/media/index.html
+++ b/files/en-us/web/media/index.html
@@ -12,7 +12,7 @@ tags:
 
 <p><span class="seoSummary">Over the years, the Web's ability to present, create, and manage audio, video, and other media has grown at an increasing pace. Today, there are a large number of APIs available, as well as HTML elements, DOM interfaces, and other features that make it possible to not only perform these tasks, but use media in tandem with other technologies to do truly remarkable things. This article lists the various APIs with links to documentation you may find helpful in mastering them.</span></p>
 
-<h2 class="Documentation" id="References">References</h2>
+<h2 id="References">References</h2>
 
 <h3 id="HTML">HTML</h3>
 
@@ -46,7 +46,7 @@ tags:
  <dd>WebRTC (Web Real-Time Communication) makes it possible to stream live audio and video, as well as transfer arbitrary data, between two peers over the Internet, without requiring an intermediary.</dd>
 </dl>
 
-<h2 class="Documentation" id="Guides">Guides</h2>
+<h2 id="Guides">Guides</h2>
 
 <dl>
  <dt><a href="/en-US/docs/Web/Media/HTML_media">Using audio and video in HTML</a></dt>
