--- a/files/en-us/web/media/formats/codecs_parameter/index.html
+++ b/files/en-us/web/media/formats/codecs_parameter/index.html
@@ -54,14 +54,13 @@ tags:
 <p>As is the case with any MIME type parameter, <code>codecs</code> must be changed to <code>codecs*</code> (note the asterisk character, <code>*</code>) if any of the properties of the codec use special characters which must be percent-encoded per {{RFC(2231, "MIME Parameter Value and Encoded Word Extensions", 4)}}. You can use the JavaScript {{jsxref("Global_Objects/encodeURI", "encodeURI()")}} function to encode the parameter list; similarly, you can use {{jsxref("Global_Objects/decodeURI", "decodeURI()")}} to decode a previously encoded parameter list.</p>
 
 <div class="notecard note">
-<p>When the <code>codecs</code> parameter is used, the specified list of codecs must include every codec used for the contents of the file. The list may also contain codecs not present in the file.</p>
+<p><strong>Note:</strong> When the <code>codecs</code> parameter is used, the specified list of codecs must include every codec used for the contents of the file. The list may also contain codecs not present in the file.</p>
 </div>
 
 <h2 id="Codec_options_by_container">Codec options by container</h2>
 
 <p>The containers below support extended codec options in their <code>codecs</code> parameters:</p>
 
-<div class="index">
 <ul>
  <li>{{anch("iso_base_media_file_format_mp4_quicktime_and_3gp", "3GP")}}</li>
  <li>{{anch("AV1")}}</li>
@@ -70,7 +69,6 @@ tags:
  <li>{{anch("iso_base_media_file_format_mp4_quicktime_and_3gp", "QuickTime")}}</li>
  <li>{{anch("WebM")}}</li>
 </ul>
-</div>
 
 <p>Several of the links above go to the same section; that's because those media types are all based on ISO Base Media File Format (ISO BMFF), so they share the same syntax.</p>
 
@@ -669,12 +667,17 @@ tags:
   </tr>
   <tr>
    <td><code>43</code></td>
-   <td>SAOC (Spatial Audio Object Coding)<sup><a href="#audio-object-types-foot-1">[1]</a></sup></td>
+   <td>
+     <p>SAOC (Spatial Audio Object Coding)</p>
+     <p>Defined in <a href="https://www.iso.org/standard/54838.html">ISO/IEC 14496-3:2009/Amd.2:2010(E)</a>.</p></td>
    <td></td>
   </tr>
   <tr>
    <td><code>44</code></td>
-   <td>LD MPEG Surround (Low Delay MPEG Surround)<sup><a href="#audio-object-types-foot-1">[1]</a></sup></td>
+   <td>
+     <p>LD MPEG Surround (Low Delay MPEG Surround)</p>
+     <p>Defined in <a href="https://www.iso.org/standard/54838.html">ISO/IEC 14496-3:2009/Amd.2:2010(E)</a>.</p>
+   </td>
    <td></td>
   </tr>
   <tr>
@@ -684,8 +687,6 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<p><a name="audio-object-types-foot-1">[1]</a> SAOC and LD MPEG Surround are defined in <a href="https://www.iso.org/standard/54838.html">ISO/IEC 14496-3:2009/Amd.2:2010(E)</a>.</p>
 
 <h3 id="WebM">WebM</h3>
 
