--- a/files/en-us/web/media/formats/image_types/index.html
+++ b/files/en-us/web/media/formats/image_types/index.html
@@ -34,7 +34,6 @@ tags:
 
 <p>The image file formats that are most commonly used on the web are listed below.</p>
 
-<div id="table-of-image-file-types">
 <table class="standard-table">
  <thead>
   <tr>
@@ -47,7 +46,7 @@ tags:
  </thead>
  <tbody>
   <tr>
-   <th scope="row"><a href="#apng">APNG</a></th>
+   <th scope="row"><a href="#APNG_Animated_Portable_Network_Graphics">APNG</a></th>
    <th scope="row">Animated Portable Network Graphics</th>
    <td><code>image/apng</code></td>
    <td><code>.apng</code></td>
@@ -55,7 +54,7 @@ tags:
     <strong>Supported</strong>: Chrome, Edge, Firefox, Opera, Safari.</td>
   </tr>
   <tr>
-   <th scope="row"><a href="#avif">AVIF</a></th>
+   <th scope="row"><a href="#AVIF_image">AVIF</a></th>
    <th scope="row">AV1 Image File Format</th>
    <td><code>image/avif</code></td>
    <td><code>.avif</code></td>
@@ -65,7 +64,7 @@ tags:
    </td>
   </tr>
   <tr>
-   <th scope="row"><a href="#gif">GIF</a></th>
+   <th scope="row"><a href="#GIF_Graphics_Interchange_Format">GIF</a></th>
    <th scope="row">Graphics Interchange Format</th>
    <td><code>image/gif</code></td>
    <td><code>.gif</code></td>
@@ -73,7 +72,7 @@ tags:
     <strong>Supported:</strong> Chrome, Edge, Firefox, IE, Opera, Safari.</td>
   </tr>
   <tr>
-   <th scope="row"><a href="#jpeg">JPEG</a></th>
+   <th scope="row"><a href="#JPEG_Joint_Photographic_Experts_Group_image">JPEG</a></th>
    <th scope="row">Joint Photographic Expert Group image</th>
    <td><code>image/jpeg</code></td>
    <td><code>.jpg</code>, <code>.jpeg</code>, <code>.jfif</code>, <code>.pjpeg</code>, <code>.pjp</code></td>
@@ -83,7 +82,7 @@ tags:
    </td>
   </tr>
   <tr>
-   <th scope="row"><a href="#png">PNG</a></th>
+   <th scope="row"><a href="#PNG_Portable_Network_Graphics">PNG</a></th>
    <th scope="row">Portable Network Graphics</th>
    <td><code>image/png</code></td>
    <td><code>.png</code></td>
@@ -93,7 +92,7 @@ tags:
    </td>
   </tr>
   <tr>
-   <th scope="row"><a href="#svg">SVG</a></th>
+   <th scope="row"><a href="#SVG_Scalable_Vector_Graphics">SVG</a></th>
    <th scope="row">Scalable Vector Graphics</th>
    <td><code>image/svg+xml</code></td>
    <td><code>.svg</code></td>
@@ -101,7 +100,7 @@ tags:
     <strong>Support:</strong> Chrome, Edge, Firefox, IE, Opera, Safari.</td>
   </tr>
   <tr>
-   <th scope="row"><a href="#webp">WebP</a></th>
+   <th scope="row"><a href="#WebP_image">WebP</a></th>
    <th scope="row">Web Picture format</th>
    <td><code>image/webp</code></td>
    <td><code>.webp</code></td>
@@ -110,7 +109,6 @@ tags:
   </tr>
  </tbody>
 </table>
-</div>
 
 <div class="notecard note">
   <p><strong>Note:</strong> The older formats like PNG, JPEG, GIF have poor performance compared to newer formats like WebP and AVIF, but enjoy broader "historical" browser support. The newer image formats are seeing increasing popularity as browsers without support become increasingly irrelevant (i.e. have virtually zero market share).</p>
@@ -118,7 +116,6 @@ tags:
 
 <p>The following list includes image formats that appear on the web, but which should be avoided for web content (generally this is because either they do not have wide browser support, or because there are better alternatives).</p>
 
-<div id="table-of-less-used-image-file-types">
 <table class="standard-table">
  <thead>
   <tr>
@@ -131,21 +128,21 @@ tags:
  </thead>
  <tbody>
   <tr>
-   <th scope="row"><a href="#bmp">BMP</a></th>
+   <th scope="row"><a href="#BMP_Bitmap_file">BMP</a></th>
    <th scope="row">Bitmap file</th>
    <td><code>image/bmp</code></td>
    <td><code>.bmp</code></td>
    <td>Chrome, Edge, Firefox, IE, Opera, Safari</td>
   </tr>
   <tr>
-   <th scope="row"><a href="#ico">ICO</a></th>
+   <th scope="row"><a href="#ICO_Microsoft_Windows_icon">ICO</a></th>
    <th scope="row">Microsoft Icon</th>
    <td><code>image/x-icon</code></td>
    <td><code>.ico</code>, <code>.cur</code></td>
    <td>Chrome, Edge, Firefox, IE, Opera, Safari</td>
   </tr>
   <tr>
-   <th scope="row"><a href="#tiff">TIFF</a></th>
+   <th scope="row"><a href="#TIFF_Tagged_Image_File_Format">TIFF</a></th>
    <th scope="row">Tagged Image File Format</th>
    <td><code>image/tiff</code></td>
    <td><code>.tif</code>, <code>.tiff</code></td>
@@ -153,14 +150,13 @@ tags:
   </tr>
  </tbody>
 </table>
-</div>
 
 <div class="notecard note">
   <p><strong>Note:</strong> The abbreviation for each image format links to a longer description of the format, its capabilities, and detailed browser compatibility information (including which versions introduced support and specific special features that may have been introduced later).</p>
 </div>
 
 <div class="notecard note">
-	<p><strong>Tip:</strong> Safari 11.1 added the ability to use a video format, as an animated gif replacement. No other browser supports this. See the <a href="https://crbug.com/791658">Chromium bug</a>, and <a href="https://bugzil.la/895131">Firefox bug</a> for more information.</p>
+	<p><strong>Note:</strong> Safari 11.1 added the ability to use a video format, as an animated gif replacement. No other browser supports this. See the <a href="https://crbug.com/791658">Chromium bug</a>, and <a href="https://bugzil.la/895131">Firefox bug</a> for more information.</p>
 </div>
 
 <h2 id="Image_file_type_details">Image file type details</h2>
@@ -169,7 +165,6 @@ tags:
 
 <p>In the tables below, the term <strong>bits per component</strong> refers to the number of bits used to represent each color component. For example, an RGB color depth of 8 indicates that each of the red, green, and blue components are represented by an 8-bit value. <strong>Bit depth</strong>, on the other hand, is the total number of bits used to represent each pixel in memory.</p>
 
-<a id="apng"></a>
 <h3 id="APNG_Animated_Portable_Network_Graphics">APNG (Animated Portable Network Graphics)</h3>
 
 <p>APNG is a file format first introduced by Mozilla which extends the {{anch("PNG")}} standard to add support for animated images. Conceptually similar to the animated GIF format which has been in use for decades, APNG is more capable in that it supports a variety of {{interwiki("wikipedia", "color depth", "color depths")}}, whereas animated GIF supports only 8-bit {{interwiki("wikipedia", "indexed color")}}.</p>
@@ -250,7 +245,6 @@ tags:
  </tbody>
 </table>
 
-<a id="avif"></a>
 <h3 id="AVIF_image">AVIF image</h3>
 
 <p>AV1 Image File Format (AVIF) is a powerful, open source, royalty-free file format that encodes <dfn>AV1 bitstreams in the High Efficiency Image File Format (HEIF) container.</dfn></p>
@@ -340,14 +334,12 @@ tags:
  </tbody>
 </table>
 
-<a id="bmp"></a>
 <h3 id="BMP_Bitmap_file">BMP (Bitmap file)</h3>
 
 <p>The <strong>BMP</strong> (<strong>Bitmap image</strong>) file type is most prevalent on Windows computers, and is generally used only for special cases in web apps and content.</p>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>You should typically avoid using BMP files for web site content. The most common form of BMP file represents the data as an uncompressed raster image, resulting in large file sizes compared to png or jpg image tpes.  More efficient BMP formats exist but are not widely used, and rarely supported in web browsers.</p>
+  <p><strong>Warning:</strong> You should typically avoid using BMP files for web site content. The most common form of BMP file represents the data as an uncompressed raster image, resulting in large file sizes compared to png or jpg image tpes.  More efficient BMP formats exist but are not widely used, and rarely supported in web browsers.</p>
 </div>
 
 <p>BMP theoretically supports a variety of internal data representations. The simplest, and most commonly used, form of BMP file is an uncompressed raster image, with each pixel occupying 3 bytes representing its red, green, and blue components, and each row padded with <code>0x00</code> bytes to a multiple of 4 bytes wide.</p>
@@ -430,7 +422,6 @@ tags:
  </tbody>
 </table>
 
-<a id="gif"></a>
 <h3 id="GIF_Graphics_Interchange_Format">GIF (Graphics Interchange Format)</h3>
 
 <p>In 1987, the CompuServe online service provider introduced the <strong>{{interwiki("wikipedia", "GIF")}}</strong> (<strong>Graphics Interchange Format</strong>) image file format to provide a compressed graphics format that all members of their service would be able to use. GIF uses the {{interwiki("wikipedia", "Lempel-Ziv-Welch")}} (LZW) algorithm to losslessly compress 8-bit indexed color graphics. GIF was one of the first two graphics formats supported by {{Glossary("HTML")}}, along with {{anch("XBM")}}.</p>
@@ -522,7 +513,6 @@ tags:
  </tbody>
 </table>
 
-<a id="ico"></a>
 <h3 id="ICO_Microsoft_Windows_icon">ICO (Microsoft Windows icon)</h3>
 
 <p>The ICO (Microsoft Windows icon) file format was designed by Microsoft for desktop icons of Windows systems. However, early versions of Internet Explorer introduced the ability for a web site to provide a ICO file named <code>favicon.ico</code> in a web site's root directory to specify a <strong><a href="/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML#adding_custom_icons_to_your_site">favicon</a></strong> — an icon to be displayed in the Favorites menu, and other places where an iconic representation of the site would be useful.</p>
@@ -530,8 +520,7 @@ tags:
 <p>An ICO file can contain multiple icons, and begins with a directory listing details about each. Following the directory comes the data for the icons. Each icon's data can be either a {{anch("BMP")}} image without the file header, or a complete {{anch("PNG")}} image (including the file header). If you use ICO files, you should use the BMP format, as support for PNG inside ICO files wasn't added until Windows Vista and may not be well supported.</p>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>ICO files <em>should not</em> be used in web content. Additionally, their use for favicons has subsided in favor of using a PNG file and the {{HTMLElement("link")}} element, as described in {{SectionOnPage("/en-US/docs/Web/HTML/Element/link", "Providing icons for different usage contexts")}}.</p>
+  <p><strong>Warning:</strong> ICO files <em>should not</em> be used in web content. Additionally, their use for favicons has subsided in favor of using a PNG file and the {{HTMLElement("link")}} element, as described in {{SectionOnPage("/en-US/docs/Web/HTML/Element/link", "Providing icons for different usage contexts")}}.</p>
 </div>
 
 <table class="standard-table">
@@ -643,7 +632,6 @@ tags:
  </tbody>
 </table>
 
-<a id="jpeg"></a>
 <h3 id="JPEG_Joint_Photographic_Experts_Group_image">JPEG (Joint Photographic Experts Group image)</h3>
 
 <p>The {{Glossary("JPEG")}} (typically pronounced "<strong>jay-peg</strong>") image format is currently the most widely used lossy compression format for still images. It's particulary useful for photographs; applying lossy compression to content requiring sharpness, like diagrams or charts, can produce unsatisfactory results.</p>
@@ -724,7 +712,6 @@ tags:
  </tbody>
 </table>
 
-<a id="png"></a>
 <h3 id="PNG_Portable_Network_Graphics">PNG (Portable Network Graphics)</h3>
 
 <p>The {{Glossary("PNG")}} (pronounced "<strong>ping</strong>") image format uses lossless or lossy compression to provide more efficient compression, and supports higher color depths than {{anch("GIF")}}, as well as full alpha transparency support.</p>
@@ -863,12 +850,11 @@ tags:
   </tr>
   <tr>
    <th scope="row">Licensing</th>
-   <td>©2003 <a href="https://www.w3.org/">W3C</a><sup>®</sup> (<a href="http://www.lcs.mit.edu/">MIT</a>, <a href="http://www.ercim.org/">ERCIM</a>, <a href="https://www.keio.ac.jp/">Keio</a>), All Rights Reserved. W3C <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Legal_Disclaimer">liability</a>, <a href="https://www.w3.org/Consortium/Legal/ipr-notice#W3C_Trademarks">trademark</a>, <a href="https://www.w3.org/Consortium/Legal/copyright-documents">document use</a> and <a href="https://www.w3.org/Consortium/Legal/copyright-software">software licensing</a> rules apply. No known royalty-bearing patents.</td>
+   <td>©2003 <a href="https://www.w3.org/">W3C</a> (<a href="http://www.lcs.mit.edu/">MIT</a>, <a href="http://www.ercim.org/">ERCIM</a>, <a href="https://www.keio.ac.jp/">Keio</a>), All Rights Reserved. W3C <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Legal_Disclaimer">liability</a>, <a href="https://www.w3.org/Consortium/Legal/ipr-notice#W3C_Trademarks">trademark</a>, <a href="https://www.w3.org/Consortium/Legal/copyright-documents">document use</a> and <a href="https://www.w3.org/Consortium/Legal/copyright-software">software licensing</a> rules apply. No known royalty-bearing patents.</td>
   </tr>
  </tbody>
 </table>
 
-<a id="svg"></a>
 <h3 id="SVG_Scalable_Vector_Graphics">SVG (Scalable Vector Graphics)</h3>
 
 <p>SVG is an <a href="/en-US/docs/Glossary/XML">XML</a>-based {{interwiki("wikipedia", "vector graphics")}} format that specifies the contents of an image as a set of drawing commands that create shapes, lines, apply colors, filters, and so forth. SVG files are ideal for diagrams, icons, and other images which can be accurately drawn at any size. As such, SVG is popular for user interface elements in modern Web design.</p>
@@ -956,12 +942,11 @@ tags:
   </tr>
   <tr>
    <th scope="row">Licensing</th>
-   <td>©2018 <a href="https://www.w3.org/">W3C</a><sup>®</sup> (<a href="http://www.lcs.mit.edu/">MIT</a>, <a href="http://www.ercim.org/">ERCIM</a>, <a href="https://www.keio.ac.jp/">Keio</a>, <a href="https://ev.buaa.edu.cn/">Beihang</a>), All Rights Reserved. W3C <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Legal_Disclaimer">liability</a>, <a href="https://www.w3.org/Consortium/Legal/ipr-notice#W3C_Trademarks">trademark</a>, <a href="https://www.w3.org/Consortium/Legal/copyright-documents">document use</a> and <a href="https://www.w3.org/Consortium/Legal/copyright-software">software licensing</a> rules apply. No known royalty-bearing patents.</td>
+   <td>©2018 <a href="https://www.w3.org/">W3C</a> (<a href="http://www.lcs.mit.edu/">MIT</a>, <a href="http://www.ercim.org/">ERCIM</a>, <a href="https://www.keio.ac.jp/">Keio</a>, <a href="https://ev.buaa.edu.cn/">Beihang</a>), All Rights Reserved. W3C <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Legal_Disclaimer">liability</a>, <a href="https://www.w3.org/Consortium/Legal/ipr-notice#W3C_Trademarks">trademark</a>, <a href="https://www.w3.org/Consortium/Legal/copyright-documents">document use</a> and <a href="https://www.w3.org/Consortium/Legal/copyright-software">software licensing</a> rules apply. No known royalty-bearing patents.</td>
   </tr>
  </tbody>
 </table>
 
-<a id="tiff"></a>
 <h3 id="TIFF_Tagged_Image_File_Format">TIFF (Tagged Image File Format)</h3>
 
 <p>{{interwiki("wikipedia", "TIFF")}} is a raster graphics file format which was created to store scanned photos, although it can be any kind of image. It is a somewhat "heavy" format, in that TIFF files have a tendency to be larger than images in other formats. This is because of the metadata often included, as well as the fact that most TIFF images are either uncompressed or use compression algorithms that still leave fairly large files after compression.</p>
@@ -1099,7 +1084,6 @@ tags:
  </tbody>
 </table>
 
-<a id="webp"></a>
 <h3 id="WebP_image">WebP image</h3>
 
 <p>WebP supports lossy compression via predictive coding based on the VP8 video codec, and lossless compression that uses substitutions for repeating data. Lossy WebP images average 25–35% smaller than JPEG images of visually similar compression levels. Lossless WebP images are typically 26% smaller than the same images in PNG format.</p>
@@ -1197,7 +1181,6 @@ tags:
   <p><strong>Note:</strong> Despite having <a href="https://developer.apple.com/videos/play/wwdc2020/10663/?time=1174">announced support</a> for WebP in Safari 14, as of version 14.0 .webp images do not display natively on a macOS desktop, whereas Safari on iOS 14 does display .webp images properly.</p>
 </div>
 
-<a id="xbm"></a>
 <h3 id="XBM_X_Window_System_Bitmap_file">XBM (X Window System Bitmap file)</h3>
 
 <p>XBM (X Bitmap) files were the first to be supported on the Web, but are no longer used and should be avoided, as their format has potential security concerns. Modern browsers have not supported XBM files in many years, but when dealing with older content, you may find some still around.</p>
